# mbari_wec_template_py

./: README.md  package.xml  setup.cfg  setup.py
config/: controller.yaml
launch/: controller.launch.py
mbari_wec_linear_damper_py/: controller.py
mbari_wec_template_py/: controller.py
